Drop shadow for standard form implemented

--- a/qdiagramlib/qdiagramlib.vcproj
+++ b/qdiagramlib/qdiagramlib.vcproj
@@ -283,6 +283,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\qdiagramshadowstyle.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\qdiagramshape.cpp"
 				>
 			</File>
@@ -680,6 +684,10 @@
 			</File>
 			<File
 				RelativePath=".\qdiagramreader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\qdiagramshadowstyle.h"
 				>
 			</File>
 			<File
